# ros2bookcode

chapt2/chapt2_ws/src/demo_cpp_pkg/: CMakeLists.txt
chapt2/chapt2_ws/src/demo_cpp_pkg/src/: learn_thread.cpp
chapt3/topic_ws/src/demo_cpp_topic/src/: turtle_circle.cpp
chapt3/topic_ws/src/demo_python_topic/demo_python_topic/: novel_pub_node.py  novel_sub_node.py
